# megalodon

./: .gitignore  AUTHORS  BUILD  CMakeLists.txt  CONTRIBUTING.md  README.md  bench.sh  build.sh  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
docs/: CNAME  about.md  blog.md  compiling.md  elo.json  elo.md  elo_tbl.py  index.md  projects.md  quick-start.md  releases.md
docs/blog/: 3-12-2021-evalweights.md
logo/: logo.blend
opening/: example_openings.txt  parser.py
release/0.0.1/: Megalodon-Linux-0.0.1
release/0.0.2/: Megalodon-Linux-0.0.2
release/0.0.3/: Megalodon-Linux-0.0.3
release/0.1.0/: Megalodon_Linux-0.1.0
release/0.1.0-alpha/: Megalodon-Linux
src/: Makefile  bitboard.cpp  bitboard.hpp  build.sh  consts.hpp  debug.hpp  endgame.cpp  endgame.hpp  eval.cpp  eval.hpp  funcs.cpp  funcs.hpp  hash.cpp  hash.hpp  main.cpp  opening.cpp  opening.hpp  options.cpp  options.hpp  perft.cpp  perft.hpp  piecemap.cpp  piecemap.hpp  random.cpp  random.hpp  search.cpp  search.hpp  uci.cpp  uci.hpp  utils.cpp  utils.hpp
src/chess/: board.cpp  board.hpp  constants.cpp  constants.hpp  funcs.cpp  funcs.hpp  move.cpp  move.hpp
src/pmaps/: bishop  king  knight  pawn  queen  rook
tests/: accuracy.py  daily_puzzle.py  formatting_check.py  hashcol.py  lichess_daily_puzzle.py  movegen_acc.py  movegen_perft.py  perft.py  randpos.py  selfplay.py  whitespace_check.py
